--- a/Lesson15/css/styles.css
+++ b/Lesson15/css/styles.css
@@ -9,8 +9,37 @@ body {
   height: 100%;
   font: 14px/26px "Open Sans", sans-serif;
 }
+
+#users {
+  margin: 50px;
+  padding: 50px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  border: 2px solid #000;
+  border-radius: 15px;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
+  background: linear-gradient(90deg, #dee7f1 0%, #adcff3 100%);
+}
+
+div {
+  margin: 20px;
+}
+
+h2 {
+  font-size: 15px;
+  font-weight: 600;
+}
+h3,
+p {
+  font-size: 16px;
+  font-weight: 400;
+}
+h4 {
+  font-size: 18px;
+}
 .theme {
-  width: 100%;
+  width: auto;
   height: 60px;
   background: #e2e2e2;
   display: flex;
@@ -25,8 +54,19 @@ body {
   margin: 20px;
   align-content: center;
 }
-.users {
-  margin: 50px;
-  padding: 20px;
-  border: 2px solid #000;
+.id-users {
+  display: none;
+}
+.name {
+  font-size: 22px;
+  color: #000;
+  font-weight: 600;
+}
+.username {
+  color: grey;
+}
+.additional-data {
+  font-size: 20px;
+  /* color: blue; */
+  padding-top: 10px;
 }
