--- a/Lesson22/styles.css
+++ b/Lesson22/styles.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Khula&display=swap");
-
 * {
   box-sizing: border-box;
 }
@@ -23,12 +21,12 @@ a:hover {
 }
 
 .start {
-  font-size: 1.5rem;
+  font-size: 24px;
 }
 
 h1 {
   line-height: 1.4;
-  font-size: 4rem;
+  font-size: 60px;
 }
 
 .screen {
@@ -64,8 +62,8 @@ h1 {
   color: #fff;
   cursor: pointer;
   font-family: inherit;
-  padding: 0.5rem 1rem;
-  font-size: 1.5rem;
+  padding: 8px 16px;
+  font-size: 24px;
 }
 
 .time-btn:hover {
@@ -86,17 +84,16 @@ h1 {
   justify-content: center;
   align-items: center;
   position: relative;
-  width: 500px;
-  height: 500px;
-  background: linear-gradient(118.38deg, #29323c -4.6%, #485563 200.44%);
+  width: 640px;
+  height: 480px;
+  background: linear-gradient(118.38deg, yellow -4.6%, #485563 200.44%);
   box-shadow: -8px -8px 20px #2a333d, 10px 7px 20px #475462;
   border-radius: 30px;
   overflow: hidden;
 }
 
-.circle {
+.square {
   background: white;
   position: absolute;
-  border-radius: 50%;
   cursor: pointer;
 }
