--- a/todoList/todo_list_app_class/src/components/ListItem/ListItem.css
+++ b/todoList/todo_list_app_class/src/components/ListItem/ListItem.css
@@ -3,6 +3,12 @@
   height: 40px;
   background-color: #e8e8e8;
   border-radius: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  padding: 0 10px;
+  margin: 10px 0;
 }
 .item-text {
   font: 400 18px/24px "Roboto", sans-serif;
@@ -11,4 +17,5 @@
 
 .bucket-icon {
   width: 30px;
+  cursor: pointer;
 }
